--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
   "name": "modal-with-message",
-  "version": "1.0.0",
   "author": "Malik Moulat",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "main":"dist/index.js",
-  "files":["dist", "README.md"], 
-  "module":"dist/index.js",
+  "version": "1.0.1",
+  "description": "Composants custom React de type Input",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "README_fr.md",
+    "dist",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/MalikMoulat/modal-with-message"
   },
+  "keywords": [
+    "modal"
+  ],
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build:react": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "test:cov": "react-scripts test --coverage",
     "clean": "rm -rf dist coverage",
     "clean:fix": "rm -rf node_modules coverage build dist docs package-lock.json"
-  },
-  "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +43,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3",
+    "react-date-range": "^1.4.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "babel-loader": "^8.3.0",
+    "babel-preset-react-app": "^10.0.1",
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
+    "jest": "^27.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "webpack": "5"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
