--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
   "name": "modal-with-message",
+  "description": "modal with custom message",
   "author": "Malik Moulat",
-  "version": "1.0.6",
-  "description": "Composants custom React de type Input",
+  "keywords": [
+    "react",
+    "components",
+    "modal"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
+  },
+  "version": "1.0.7",
+  "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
-    "README_fr.md",
     "dist",
     "README.md"
   ],
@@ -14,17 +33,18 @@
     "type": "git",
     "url": "https://github.com/MalikMoulat/modal-with-message"
   },
-  "keywords": [
-    "modal"
-  ],
+  "dependencies": {
+    "@babel/cli": "^7.21.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
-    "build:react": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files",
     "test": "react-scripts test",
-    "test:cov": "react-scripts test --coverage",
-    "clean": "rm -rf dist coverage",
-    "clean:fix": "rm -rf node_modules coverage build dist docs package-lock.json"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,26 +63,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.21.5",
-    "@babel/preset-react": "^7.18.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "babel-loader": "^8.3.0",
-    "babel-preset-react-app": "^10.0.1",
-    "eslint": "^8.28.0",
-    "eslint-plugin-react": "^7.31.11",
-    "jest": "^27.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "webpack": "5"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   }
 }
